--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -69,9 +69,12 @@
 }
 
 .cliqz-image-desc {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.6);
+  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: bold;
+  font-size: 9pt;
   color: white;
-  padding: 2px;
+  padding: 2px 2px 2px 5px;
   margin: 0px 5px 10px 0px;
 }
 
