--- a/cliqz@cliqz.com/chrome/skin/logo.css
+++ b/cliqz@cliqz.com/chrome/skin/logo.css
@@ -4047,8 +4047,8 @@
 .logo-farsnews-com {
 	background-image: url(http://cdnlogos.cliqz.com/farsnews.com.png);
 }
-.logo-faschingshop24-de-jpg {
-	background-image: url(http://cdnlogos.cliqz.com/faschingshop24.de.jpg.png);
+.logo-faschingshop24-de {
+	background-image: url(http://cdnlogos.cliqz.com/faschingshop24.de.png);
 }
 .logo-fashion-insider-de {
 	background-image: url(http://cdnlogos.cliqz.com/fashion-insider.de.png);
