log last search

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -292,7 +292,7 @@
 .cliqz-urlbar-Last-search {
   font-family: Verdana, Geneva, sans-serif;
   color: white;
-  background-color: #009624;
+  background-color: #66cccc;
   margin: 1px;
   padding: 1px 5px;
   border-radius: 1px;
