--- a/cliqz@cliqz.com/chrome/skin/options.css
+++ b/cliqz@cliqz.com/chrome/skin/options.css
@@ -225,3 +225,15 @@ body {
 .center {
 	margin: 0 auto;
 }
+
+.ui-tooltip {
+    padding: 8px;
+    position: absolute;
+    z-index: 9999;
+    background: white;
+    max-width: 400px;
+    box-shadow: 0 0 5px #aaa;
+    font-size: 15px;
+	font-family: "Helvetica";
+	color: rgb( 153, 153, 153 );
+}
