--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -55,10 +55,6 @@
   width: 10px;
 }
 
-.cliqz-separator-engines {
-  width: 80px;
-}
-
 .cliqz-url-box {
   margin: 0px;
   padding: 0px;
@@ -176,13 +172,22 @@
   border-color: #cccccc;
 }
 
+.cliqz-separator-engines {
+  width: 80px;
+  height: 0px;
+}
+
+.cliqz-separator-inter-engines {
+  border-left: 1px solid #cccccc;
+}
+
 .cliqz-ac-engine {
-  padding: 4px;
-  margin: 4px;
+  padding: 8px;
+  margin: 0px;
 }
 
 .cliqz-ac-engine-default {
-  border: 1px solid #cccccc;
+  background-color: Lavender ;
 }
 
 .cliqz-ac-engine:hover {
@@ -192,7 +197,7 @@
 
 .cliqz-ac-engine-source {
   width: 25px;
-  height: 31px;
+  height: 25px;
   margin-right: 2px;
   border-left: 5px solid #cccccc;
   background-image: url(chrome://cliqzres/content/skin/search-black.png);
