--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -364,7 +364,7 @@
 .cliqz-logo-container {
   width: 36px;
   height: 48px;
-  margin-right: 18px;
+  margin: 0 18px;
 }
 
 .cliqz-logo-container:hover {
