include verticals - ‘barbarian’ results regeneration

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -95,6 +95,7 @@
 /* autocomplete popup container */
 #PopupAutoCompleteRichResult {
   max-height: 165px;
+  min-height: 250px;
 }
 
 .ac-type-icon {
