--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -70,8 +70,8 @@
 }
 
 .cliqz-ac-image {
-  width: 96px;
-  height: 54px;
+  width: 96px; /* 16 */
+  height: 54px; /* 9 */
   padding: 5px 5px 5px 0px;
   margin-left: 12px;
 }
