--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -176,6 +176,10 @@
   */
 }
 
+.cliqz-one-space {
+  margin-left: 5px;
+}
+
 .cliqz-suggestion {
   padding: 1px 5px 0px 5px;
   margin: 5px 5px 1px 3px;
@@ -192,8 +196,6 @@
 }
 
 .cliqz-suggestion-extra {
-  margin: 0px;
-  padding: 0px;
   font-weight: 600;
 }
 
