fix suggestions + other bugs

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -9,7 +9,7 @@
 */
 
 #PopupAutoCompleteRichResult {
-  -moz-binding: url("chrome://cliqz/content/components.xml?v=2#autocomplete-rich-result-popup-cliqz");
+  -moz-binding: url("chrome://cliqz/content/components.xml?v=3#autocomplete-rich-result-popup-cliqz");
 }
 
 /* bookmark icon ovveride */
@@ -24,12 +24,12 @@
 }
 
 .autocomplete-richlistbox {
-  -moz-binding: url("chrome://cliqz/content/components.xml?v=2#autocomplete-richlistbox-cliqz");
+  -moz-binding: url("chrome://cliqz/content/components.xml?v=3#autocomplete-richlistbox-cliqz");
 }
 
 /* result item */
 .autocomplete-richlistitem {
-  -moz-binding: url("chrome://cliqz/content/components.xml?v=2#autocomplete-richlistitem-cliqz");
+  -moz-binding: url("chrome://cliqz/content/components.xml?v=3#autocomplete-richlistitem-cliqz");
   padding: 5px 0;
   border-width: 1px 1px 0px 0;
   border-style: solid;
@@ -44,7 +44,7 @@
 */
 
 .button-cliqz {
-  -moz-binding: url("chrome://cliqz/content/components.xml?v=2#button-cliqz");
+  -moz-binding: url("chrome://cliqz/content/components.xml?v=3#button-cliqz");
   cursor: pointer;
 }
 
@@ -186,6 +186,9 @@
 
 .cliqz-suggestion:hover, .cliqz-suggestion-default {
   background-color: #eeeeee;
+}
+
+.cliqz-suggestion * {
   cursor: pointer;
 }
 
