--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -198,6 +198,8 @@
 }
 
 .cliqz-suggestion-extra {
+  margin: 0px;
+  padding: 0px;
   font-weight: 600;
 }
 
@@ -392,16 +394,16 @@
 
 .cliqz-ac-logo-icon {
   height: 36px;
-  width: 36px;
+  width: 40px;
   background-repeat: no-repeat;
-  background-position: left center;
+  background-position: center center;
   background-size: 36px 36px;
 }
 
 .cliqz-logo-container {
-  width: 36px;
+  width: 40px;
   height: 48px;
-  margin: 0 18px;
+  margin: 0 24px 0 18px;
 }
 
 .cliqz-logo-container:hover {
