add search engine selection in options

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -36,6 +36,10 @@
   border-color: #cccccc;
 }
 
+.cliqz-menu-btn {
+  width: 16px;
+  height: 16px;
+}
 /*
 .autocomplete-richlistitem * {
   border: 1px solid red;
