Make description text smaller

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -139,7 +139,7 @@
 }
 
 .autocomplete-richlistitem .ac-title-box {
-  color: #000000;
+  color: #333333;
 }
 
 .autocomplete-richlistitem[type="cliqz-suggestions"] .ac-title-box,
@@ -293,10 +293,11 @@
 }
 
 .cliqz-ac-description {
-  font-size: 10pt;
+  font-size: 9pt;
   padding-left: 13px;
   margin-bottom: 6px;
-  color: #888888;
+  line-height: 13pt;
+  color: #333333;
 }
 
 .cliqz-ac-description-box {
@@ -449,13 +450,13 @@
 }
 
 .cliqz-ac-url-host {
-  font-size: 10pt;
+  font-size: 9pt;
   color: #007aff;
   font-weight: 400;
 }
 
 .cliqz-ac-url-path {
-  font-size: 10pt;
+  font-size: 9pt;
   color: #cccccc;
   font-weight: 400;
 }
