fix caching at update issues extra bold suggestions

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -40,12 +40,18 @@
   width: 16px;
   height: 16px;
 }
+
 /*
-.autocomplete-richlistitem * {
+#PopupAutoCompleteRichResult  * {
   border: 1px solid red;
   background-color: green;
 }
 */
+
+.cliqz-no-margin-padding {
+  margin: 0px;
+  padding: 0px;
+}
 
 .button-cliqz {
   -moz-binding: url("chrome://cliqz/content/components.xml?v=3#button-cliqz");
@@ -180,7 +186,7 @@
 }
 
 .cliqz-one-space {
-  margin-left: 5px;
+  border-left: 5px solid transparent;
 }
 
 .cliqz-suggestion {
