set maximum width of visual has tags to aprox 7 engines

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -255,7 +255,7 @@
 }
 
 .cliqz-engines-container:hover .cliqz-engines {
-  width: 400px;
+  width: 182px; /* 7 engines */
 }
 
 .cliqz-engines-container:hover .cliqz-engines-text {
