--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -300,6 +300,8 @@
   line-height: 13pt;
   color: #333333;
   max-width: 700px;
+  overflow: hidden;
+  max-height: 27px;
 }
 
 .cliqz-ac-description-box {
