skinning rabbit line image

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -59,7 +59,7 @@
 }
 
 .cliqz-left-separator {
-  width: 13px;
+  width: 7px;
   height: 24px;
 }
 
@@ -69,7 +69,7 @@
 
 .cliqz-url-box {
   margin: 0px;
-  padding: 0px;
+  padding: 2px 0 0 6px;
 }
 
 .cliqz-image-box {
@@ -330,7 +330,10 @@
 .autocomplete-richlistitem[type="action bookmark"] .cliqz-ac-source-icon,
 .autocomplete-richlistitem[type="tag"] .cliqz-ac-source-icon,
 .autocomplete-richlistitem[type="action tag"] .cliqz-ac-source-icon {
-
+  height: 9px;
+  width: 9px;
+  background-color: #FFCC00;
+  border-radius: 50%;
 }
 
 .autocomplete-richlistitem[type="cliqz-results"][selected="true"] {
@@ -351,7 +354,7 @@
 .autocomplete-richlistitem[type="tag"][selected="true"] {
 
 }
-
+/*
 .autocomplete-richlistitem[selected="true"] {
   border-color: black;
   border-width: 1px 1px 1px 0;
@@ -368,10 +371,10 @@
 .autocomplete-richlistitem[selected="true"] + .autocomplete-richlistitem:last-of-type {
   border-bottom-width: 1px;
 }
-
+*/
 
 .autocomplete-richlistitem[selected="true"] {
-  background-color: white;
+  background-color: #eeeeee;
   background-image: none;
   /* override windows aero styles*/
   border-radius: 0px;
@@ -383,7 +386,7 @@
 
 }
 .autocomplete-richlistitem:hover {
-  background-color: rgba(204, 204, 204, 0.2);
+  background-color: #eeeeee;
 }
 
 .autocomplete-richlistitem:hover .cliqz-logo-container {
@@ -395,7 +398,7 @@
 }
 
 .autocomplete-richlistitem[selected="true"]:hover {
-  background-color: white;
+  background-color: #eeeeee;
 }
 
 .cliqz-ac-logo-icon {
@@ -458,7 +461,7 @@
 
 .cliqz-ac-url-host {
   font-size: 9pt;
-  color: #007aff;
+  color: #006666;
   font-weight: 400;
 }
 
@@ -473,10 +476,12 @@
 }
 
 .cliqz-urlbar-Last-search {
+  background: url(chrome://cliqzres/content/skin/rabbit_arrow.png) no-repeat 5px center;
+  background-size: 14px 10px;
   color: white;
   background-color: grey;
   margin: 0px;
-  padding: 1px 6px 2px 6px;
+  padding: 2px 6px 2px 24px;
   border-radius: 1px;
   max-width: 200px;
   text-overflow: ellipsis;
